--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,54 @@
 .App {
+  font-family: sans-serif;
+  text-align: center;
+  margin: 20px;
+}
+
+body {
+  background-image: url(https://s3.amazonaws.com/shecodesio-production/uploads/files/000/084/926/original/wallpaperflare.com_wallpaper_%281%29.jpg?1686272580);
+  background-size: cover;
+}
+
+h1 {
+  display: block;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h2 {
+  display: block;
+  text-align: center;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+ul {
+  text-align: center;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.c-temp {
+  display: block;
+  text-align: center;
 }
-
-.App-link {
-  color: #61dafb;
+.container {
+  margin-top: 200px;
+  max-width: 50%;
+  max-height: 100%;
+  padding: 40px 20px;
+  opacity: 70%;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+.f-temp {
+  display: block;
+  text-align: center;
+}
+.search-form {
+  display: block;
+  padding: 20px 10px;
+  margin-right: auto;
+  text-align: center;
+}
+.sun-pic {
+  margin: 0 auto;
+  max-width: 5%;
+  display: block;
+  text-align: center;
+}
+@media only screen and (max-width: 480px) {
+  img {
+    width: 100%;
   }
 }
